css/styles.css
/* ... */
#post_image {
    width: 100%;
    max-width: 250px;
    height: auto;
    aspect-ratio: 1 / 1;
    border-radius: 6px;
    margin-right: 0;
    object-fit: cover;
    object-position: center;
}

.blog_section {
    /*background-color: rgba(43, 42, 51, 0.5);*/
    background-color: rgba(0, 0, 0, 0.5);
    display: block;
    color: #fff;
    width: 78vw;
    max-width: 1200px;
    padding: 30px;
    border-radius: 50px;
    margin: auto;
    margin-bottom: 250px;
    font-size: 1.3em;
}

.hidden {
    opacity: 0;
}

.visible {
    opacity: 1;
    transition: opacity 2s ease-out;
}

.blog_section > * {
    margin: 75px 115px;
}

.blog_stats {
    /* width: 100vw; */
    margin-bottom: 200px;
}

#map {
    display: flex;
    position: relative;
    right: auto;
    bottom: 0;
    width: 100%;
    max-width: 250px;
    height: auto;
    aspect-ratio: 1 / 1;
    border-radius: 6px;
}

#img_map {
    display: flex;
    flex-direction: column;
    gap: 15px;
    flex-shrink: 0;
}

@media all and (max-width: 2400px) and (min-width: 1921px) {
    .tiles > img,
    .content {
        border-radius: 30px;
        width: 666px;
        height: 385px;
    }
}

@media all and (max-width: 1920px) and (min-width: 1441px) {
    .tiles > img,
    .content {
        border-radius: 24px;
        width: 500px;
        height: 289px;
    }
}

@media all and (max-width: 1440px) {
    .hero_text {
        color: #fff;
        text-shadow: 4px 4px 8px #222;
        width: 90vw;
        font-weight: bold;
    }
    .hero_subtitle {
        width: 80vw;
    }
    .tiles > img,
    .content {
        border-radius: 24px;
        width: 500px;
        height: 289px;
    }
    .blog_section {
        font-size: 1.1em;
    }
    .blog_section > * {
        margin: 20px 40px;
    }
}

@media all and (max-width: 1200px) {
    /* Standard Bootstrap breakpoint */
    html,
    body {
        background-attachment: inherit;
        background-repeat: repeat;
        background-size: cover;
        background-position: top, center;
        box-sizing: border-box;
        font-size: 90%;
    }
}

@media all and (max-width: 992px) {
    .description {
        top: 33px;
    }
    .spacer {
        min-height: 100px;
        height: 100px;
    }
    #hero_title_card {
        display: none;
        visibility: hidden;
    }
    .hero {
        height: 100vh; /* Fallback for browsers that do not support Custom Properties */
        height: calc(var(--vh, 1vh) * 100);
        z-index: 1;
    }
}

@media all and (max-width: 768px) {
    html,
    body {
        font-size: 80%;
    }
    .category_container {
        justify-content: center;
        padding-top: 50px;
    }
    .category {
        width: 100%;
        text-align: center;
    }
    .category > img {
        width: 90%;
        height: auto;
    }
    .banner {
        width: 146px;
    }
    .description {
        top: 36px;
    }
    .tiles > img,
    .content {
        border-radius: 20px;
        width: 307px;
        height: 177px;
    }
    .spacer {
        min-height: 50px;
        height: 50px;
    }
    .section_text {
        margin: 15px 35px 0;
    }
}

@media all and (max-width: 992px) {
    /* Tablet breakpoint */
    .blog_section {
        width: 85vw;
        padding: 25px;
        font-size: 1.15em;
    }
    .blog_section > * {
        margin: 50px 60px;
    }
}

@media all and (max-width: 768px) {
    /* Tablet portrait / larger mobile */
    .blog_section {
        width: 90vw;
        padding: 20px;
        font-size: 1.1em;
        border-radius: 30px;
    }
    .blog_section > * {
        margin: 30px 40px;
    }
    .post_wrapper {
        flex-direction: column;
        gap: 20px;
    }
    #img_map {
        flex-direction: row;
        justify-content: center;
        align-items: flex-start;
        gap: 15px;
        width: 100%;
    }
    .post_img,
    #post_image,
    #map {
        max-width: 200px;
    }
}

@media all and (max-width: 576px) {
    /* Standard Bootstrap breakpoint */
    .hero_text {
        padding-top: calc(100vh * 3 / 10);
        margin-bottom: calc(100vh * 7 / 10);
    }
    .hero_subtitle {
        font-size: 4.2em;
        width: 95vw;
    }
    .blog_section {
        width: 92vw;
        padding: 20px 15px;
        font-size: 1em;
        border-radius: 25px;
    }
    .blog_section > * {
        margin: 20px 25px;
    }
    .post_wrapper {
        flex-direction: column;
        gap: 15px;
    }
    #img_map {
        flex-direction: column;
        align-items: center;
    }
    .post_img,
    #post_image,
    #map {
        max-width: 100%;
        width: 100%;
    }
    .view_post {
        padding-bottom: 18px;
    }
}
/*iphone 7+ 414x605*/
@media all and (max-width: 414px) {
    .section_title > h1 {
        padding-left: 10px;
    }
    header {
        padding: 14px;
    }
    #img_map {
        flex-direction: column;
    }
    #post_image {
        margin: auto;
    }
    .post_img {
        padding-bottom: 15px;
    }
    .hero_text {
        padding-top: calc(100vh * 1.75 / 8);
        margin-bottom: calc(100vh * 6.25 / 8);
    }
    .bg_switcher {
        margin-right: 40px;
    }
    #bg_switcher_button3,
    #bg_switcher_button4 {
        display: none;
    }
}

@media all and (max-width: 375px) {
    #pipe {
        display: none;
    }
}

